@@ -1,3 +1,8 @@
+2008-07-20  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in: Add missing treemagic for the
+	recently added filetypes
+
 2008-07-19  Bastien Nocera  <hadess@hadess.net>
 
 	* Makefile.am: Fail if the tree test failed
